Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Will You Be Mine? 💖</title>
+  <title>Will You Be mine bisheyyy? 💖</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -70,3 +70,4 @@
 
 </body>
 </html>
+
