Fix HTML encoding issues in v2.html

--- a/v2.html
+++ b/v2.html
@@ -71,28 +71,28 @@
 
 <!-- Gift 1 -->
 <div class="gift" onclick="pickGift(this)">
-  <img src="giftBox.png" class="box">
+  <img src="giftbox.png" class="box">
   <img src="g1.png" class="opened">
   <div class="message">🌹 iloveyouuu </div>
 </div>
 
 <!-- Gift 2 -->
 <div class="gift" onclick="pickGift(this)">
-  <img src="giftBox.png" class="box">
+  <img src="giftbox.png" class="box">
   <img src="g2.png" class="opened">
   <div class="message">malai ni deunaaa</div>
 </div>
 
 <!-- Gift 3 -->
 <div class="gift" onclick="pickGift(this)">
-  <img src="giftBox.png" class="box">
+  <img src="giftbox.png" class="box">
   <img src="g3.png" class="opened">
   <div class="message">teddy</div>
 </div>
 
 <!-- Gift 4 -->
 <div class="gift" onclick="pickGift(this)">
-  <img src="giftBox.png" class="box">
+  <img src="giftbox.png" class="box">
   <img src="g4.png" class="opened">
   <div class="message">mero lagi yo chaii</div>
 </div>
@@ -147,3 +147,4 @@
 
 </body>
 </html>
+
